# university-db

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Database.cpp  Database.hpp  Pesel.cpp  Pesel.hpp  PeselValidator.cpp  PeselValidator.hpp  Student.cpp  Student.hpp  main.cpp
tests/: DatabaseTest.cpp  PeselTest.cpp  PeselValidatorTest.cpp  test.cpp
